objects/IDP_Status_Event__e.object
<CustomObject>
    <fields>
        <fullName>IDP_RFI__c</fullName>
        <label>IDP RFI</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IDP_Error__c</fullName>
        <label>IDP Error</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IDP_Status__c</fullName>
        <label>IDP Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDP_Product__c</fullName>
        <label>IDP Product</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IDP_Summary__c</fullName>
        <label>IDP Summary</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <label>Opportunity Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Version_Id__c</fullName>
        <label>Content Version Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>IDP Status Event</label>
    <pluralLabel>IDP Status Event</pluralLabel>
</CustomObject>